tests/asm-link/section-in-load/rgbasm.err
[-Wunterminated-load] warning: `load` block terminated by `section`
   ╭─[ test.asm:3:1 ]
   │
 3 │ SECTION "outer2", ROM0
   │ ───┬───  
   │    ╰───── no `endl` before this point
───╯
error: `endl` used outside of a `load` block
   ╭─[ test.asm:4:1 ]
   │
 4 │ ENDL
   │ ──┬─  
   │   ╰─── this directive is invalid
───╯
1 error generated.
